# neptyne-kernel

./: .gitignore  BUILDING.md  README.md  pyproject.toml
kernel/: .dockerignore  Dockerfile  cell_address.py  cell_api.py  cell_copier.py  cell_copier_test.py  cell_execution_graph.py  cell_range.py  code_dependencies_parser.py  code_highlight.py  codepanel.py  conftest.py  dash.py  dash_benchmark.py  dash_ref.py  dash_test.py  dash_traceback.py  dashref_test.py  download.py  expression_compiler.py  expression_compiler_test.py  formula_names.py  get_ipython_mockable.py  gsheets_api.py  gsheets_api_test.py  insert_delete_helper.py  kernel_init.py  launch_ipykernel.py  launch_ipykernel_test.py  linter.py  mime_handling.py  mutex_manager.py  neptyne_protocol.py  neptyne_secrets.py  ops.py  pandas_unrolling.py  primitives.py  primitives_test.py  proxied_apis.py  renderers.py  (+7 more)
kernel/formulas/: README.md  TODO.md  database.py  date_time.py  engineering.py  helpers.py  information.py  information_test.py  lookup.py  lookup_test.py  spreadsheet_datetime.py  spreadsheet_datetime_test.py  spreadsheet_error.py  spreadsheet_error_test.py  string_test.py
kernel/neptyne_api/: README.md  __init__.py  caching.py  cell.py  cron.py  formatting.py  geo.py  hooks.py  secrets.py  sheet.py  streamlit_decorator.py  upload_download.py  vectorize.py
kernel/tyne_model/: cell.py  cell_test.py  events.py  kernel_init_data.py  sheet.py
neptyne_kernel/: Dockerfile  __init__.py  api_ref.py  bokeh_formatter.py  cell_address_test.py  cell_api.py  cell_execution_graph.py  cell_range.py  cell_range_test.py  codepanel.py  conftest.py  dash.py  dash_benchmark.py  dash_traceback.py  datetime_conversions.py  dockerfile_test.py  expression_compiler.py  formula_names.py  get_ipython_mockable.py  google_sheets_api_test.py  gsheets_api.py  gsheets_api_test.py  insert_delete_helper_test.py  json_tools.py  kernel.py  kernel_entrypoint.sh  kernel_init.py  kernel_runtime.py  kernel_runtime_test.py  launch_ipykernel.py  linter.py  mime_handling.py  mime_types.py  neptyne_protocol.py  neptyne_secrets.py  pip.py  primitives.py  proxied_apis.py  requirements-extras.in  requirements-formulas.in  (+12 more)
(+81 files in other folders)
