[project]
name = "neptyne-kernel"
version = "0.1.7"
description = "The Neptyne kernel"
readme = "README.md"
authors = []
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["dependencies"]
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project.urls]
Homepage = "https://neptyne.com"
Documentation = "https://docs.neptyne.com"
Repository = "https://github.com/neptyneco/neptyne-kernel.git"
[tool.setuptools.dynamic]
dependencies = { file = ["neptyne_kernel/requirements.txt"] }
[tool.setuptools.package-data]
neptyne_kernel = ["kernel_spec/neptyne/kernel.json"]
